[package]
name = "wolfram-code-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This crate can be used as Rust dependency, or as a dynamic library.
crate-type = ["rlib", "cdylib"]


[features]
COMPUTE_SOURCE = []
CHECK_ISSUES = []
COMPUTE_OOB = []
FAST_STRING_SCAN = []

# Features used when building the LibraryLink dynamic library.
USE_MATHLINK = ["wolfram-library-link"]
CHECK_ABORT = []

default = ["COMPUTE_SOURCE", "CHECK_ISSUES", "COMPUTE_OOB"]


[dependencies]
once_cell = "1.13.0"
strum = { version = "0.24", features = ["derive"] }
ordered-float = "3.0"
edit-distance = "2.1.0"
memchr = "2.5.0"
regex = "1.6.0"

wolfram-library-link = { version = "0.2.9", optional = true, default-features = false }

[patch.crates-io]
wolfram-library-link     = { git = "https://github.com/WolframResearch/wolfram-library-link-rs" }
wolfram-library-link-sys = { git = "https://github.com/WolframResearch/wolfram-library-link-rs" }
wstp     = { git = "https://github.com/WolframResearch/wstp-rs" }
wstp-sys = { git = "https://github.com/WolframResearch/wstp-rs" }

[dev-dependencies]
pretty_assertions = "1.2.1"

criterion = "0.3.6"

[[bench]]
name = "bench_general"
harness = false

[[bench]]
name = "bench_fast_string_scan"
harness = false
required-features = ["FAST_STRING_SCAN"]
