[package]
name = "wolfram-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bin]]
name = "main"
bench = false

[features]
COMPUTE_SOURCE = []
CHECK_ISSUES = []
COMPUTE_OOB = []
FAST_STRING_SCAN = []

# Features used when building the LibraryLink dynamic library.
CHECK_ABORT = ["wolfram-library-link"]

default = ["COMPUTE_SOURCE", "CHECK_ISSUES", "COMPUTE_OOB"]


[dependencies]
edit-distance = "2.1.0"
memchr = "2.5.0"

wolfram-expr = "0.1.4"

wolfram-library-link = { version = "0.2.10", optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1.2.1"

criterion = "0.5.1"

[[bench]]
name = "bench_general"
harness = false

[[bench]]
name = "bench_fast_string_scan"
harness = false
required-features = ["FAST_STRING_SCAN"]
